# isbn-viewer

./: .gitignore  index.html
processing/: README.md  create_country_polygons.py  create_country_vector_tiles.py  create_groups_polygons.py  create_groups_vector_tiles.py  create_holding_polygons.py  create_raster_tiles.py  polygon_utils.py  preprocess_isbn_groups.py  pyproject.toml  utils.py
processing/data/: isbn_prefix_countries.json
public/: cadal_ssno.pmtiles  cadal_ssno_holdings.pmtiles  cerlalc.pmtiles  cerlalc_holdings.pmtiles  country_1.pmtiles  country_2.pmtiles  country_3.pmtiles  country_4.pmtiles  country_5.pmtiles  duxiu_ssid.pmtiles  edsebk_holdings.pmtiles  goodreads_holdings.pmtiles  groups3.pmtiles  groups4.pmtiles  groups_3.pmtiles  groups_4.pmtiles  groups_5.pmtiles  ia.pmtiles  ia_holdings.pmtiles  isbn-viewer-style.json  isbn-viewer.js  isbngrp.pmtiles  isbngrp_holdings.pmtiles  libby_holdings.pmtiles  nexusstc_holdings.pmtiles  rgb.pmtiles  rgb_holdings.pmtiles  style.css  trantor.pmtiles  trantor_holdings.pmtiles
